--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ authors = [
     { name = "Gerson Gallo", email = "ggallovalle@gmail.com" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "jinja2>=3.1.6",
+    "ruamel-yaml>=0.18.15",
+    "yamale>=6.0.0",
+]
 
 [project.scripts]
 dotfiles-manager = "dotfiles_manager:main"
