feat(package_manager): add PacmanManager with flexible command, error handling, and tests
Implement PacmanManager following PackageManager protocol, supporting custom commands (e.g., pacman, paru)
Add PackageManagerHelper for command execution, instantiated in manager constructor
Improve error handling: distinguish between missing command and missing package
Add and update pytest tests for pacman and paru, including PackageManagerNotFound case

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ dotfiles-manager = "dotfiles_manager:main"
 [build-system]
 requires = ["uv_build>=0.8.15,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-xdist>=3.8.0",
+]
