--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "jinja2>=3.1.6",
     "ruamel-yaml>=0.18.15",
+    "semantic-version>=2.10.0",
     "yamale>=6.0.0",
 ]
 
