--- a/dots/Cargo.toml
+++ b/dots/Cargo.toml
@@ -28,9 +28,10 @@ miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.16"
 clap = { version = "4.0", features = ["derive"], optional = true }
 clap_complete = { version = "4", optional = true }
-tracing-subscriber = { version = "0.3", optional = true }
+tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"]}
 
 [features]
+default = ["cli"]
 cli = ["clap", "clap_complete", "tracing-subscriber"]
 
 [[bin]]
