--- a/dots/Cargo.toml
+++ b/dots/Cargo.toml
@@ -31,10 +31,11 @@ clap = { version = "4.0", features = ["derive"], optional = true }
 clap_complete = { version = "4", optional = true }
 tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"]}
 tracing-appender = { version = "0.2.3", optional = true }
+scopeguard = { version = "1.2.0", optional = true }
 
 [features]
 default = ["cli"]
-cli = ["clap", "clap_complete", "tracing-subscriber", "tracing-appender"]
+cli = ["clap", "clap_complete", "tracing-subscriber", "tracing-appender", "scopeguard"]
 
 [[bin]]
 name = "dots"
