--- a/dots/Cargo.toml
+++ b/dots/Cargo.toml
@@ -20,20 +20,49 @@ semver = "1.0"
 indexmap = "2.11.1"
 regex = "1.11.2"
 either = "1.15.0"
-strum = { version = "0.27", features = ["derive"] }
 
-tracing = { version = "0.1", features = ["valuable"] }
-valuable = { version = "0.1.1", features = ["derive"] }
 kdl = "6.3.4"
-miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.16"
 ignore = "0.4.23"
 globset = "0.4.16"
-clap = { version = "4.0", features = ["derive"], optional = true }
-clap_complete = { version = "4", optional = true }
-tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"]}
-tracing-appender = { version = "0.2.3", optional = true }
-scopeguard = { version = "1.2.0", optional = true }
+
+[dependencies.strum]
+version = "0.27"
+features = ["derive"]
+
+[dependencies.tracing]
+version = "0.1"
+features = ["valuable"]
+
+[dependencies.valuable]
+version = "0.1.1"
+features = ["derive"]
+
+[dependencies.miette]
+version = "7.6.0"
+features = ["fancy"]
+
+[dependencies.clap]
+version = "4.0"
+features = ["derive"]
+optional = true
+
+[dependencies.clap_complete]
+version = "4"
+optional = true
+
+[dependencies.tracing-subscriber]
+version = "0.3"
+features = ["env-filter", "json"]
+optional = true
+
+[dependencies.tracing-appender]
+version = "0.2.3"
+optional = true
+
+[dependencies.scopeguard]
+version = "1.2.0"
+optional = true
 
 [features]
 default = ["cli"]
