--- a/crates/casa/Cargo.toml
+++ b/crates/casa/Cargo.toml
@@ -25,6 +25,8 @@ kdl = "6.3.4"
 thiserror = "2.0.16"
 ignore = "0.4.23"
 globset = "0.4.16"
+subst = "0.3.8"
+minijinja = "2.12.0"
 
 [dependencies.strum]
 version = "0.27"
@@ -63,6 +65,9 @@ optional = true
 [dependencies.scopeguard]
 version = "1.2.0"
 optional = true
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
 
 [features]
 default = ["cli"]
