--- a/crates/casa/Cargo.toml
+++ b/crates/casa/Cargo.toml
@@ -11,20 +11,16 @@ A dotfile manager.
 """
 
 [dependencies]
-lazy_static = "1.5.0"
-
 dirs-next = "2.0.0"
 which = "8.0.0"
 semver = "1.0"
 
 indexmap = "2.11.1"
-regex = "1.11.2"
 either = "1.15.0"
 
 kdl = "6.3.4"
 thiserror = "2.0.16"
 ignore = "0.4.23"
-globset = "0.4.16"
 subst = "0.3.8"
 minijinja = "2.12.0"
 
@@ -42,7 +38,6 @@ features = ["derive"]
 
 [dependencies.miette]
 version = "7.6.0"
-features = ["fancy"]
 
 [dependencies.clap]
 version = "4.0"
@@ -71,7 +66,14 @@ pretty_assertions = "1.4.1"
 
 [features]
 default = ["cli"]
-cli = ["clap", "clap_complete", "tracing-subscriber", "tracing-appender", "scopeguard"]
+cli = [
+    "clap",
+    "clap_complete",
+    "tracing-subscriber",
+    "tracing-appender",
+    "scopeguard",
+    "miette/fancy",
+]
 
 [[bin]]
 name = "casa"
